[gd_scene load_steps=4 format=3 uid="uid://tg7sp0cs0je6"]

[ext_resource type="Script" path="res://scripts/maintenance_spot.gd" id="1_tor2v"]
[ext_resource type="Texture2D" uid="uid://dnbm05dopqatx" path="res://CircularProgressBar.png" id="2_tk86c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pte1u"]
radius = 1.0

[node name="MaintenanceSpot" type="Node3D"]
script = ExtResource("1_tor2v")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_pte1u")
disabled = true

[node name="Visual" type="MeshInstance3D" parent="."]

[node name="ProgressBar3D" type="Sprite3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="ProgressBar3D"]
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="ProgressBar" type="TextureProgressBar" parent="ProgressBar3D/SubViewport"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
fill_mode = 4
texture_under = ExtResource("2_tk86c")
texture_progress = ExtResource("2_tk86c")
tint_under = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ProgressBar3D/SubViewport/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -55.0
offset_right = 22.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
